# smart-email-agent-env

./: .dockerignore  .gitignore  Dockerfile  README.md  inference.py  openenv.yaml  pyproject.toml  requirements.txt
env/: __init__.py  environment.py  models.py  rewards.py
server/: __init__.py  app.py
tasks/: __init__.py  easy_task.py  graders.py  hard_task.py  medium_task.py
