[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "smart-email-agent-env"
version = "0.1.0"
description = "Smart Email Task & Calendar Agent Environment (OpenEnv-compatible)"
requires-python = ">=3.10"
readme = "README.md"
license = { text = "MIT" }
dependencies = [
  "fastapi>=0.135.0",
  "uvicorn>=0.42.0",
  "pydantic>=2.12.0",
  "httpx>=0.28.0",
  "openai>=2.30.0",
  "python-dotenv>=1.2.0",
  "openenv-core>=0.2.0",
]

[project.scripts]
server = "server.app:main"
smart-email-agent-env-server = "server.app:main"

[tool.setuptools]
packages = ["env", "tasks", "server"]

